--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
 
 <!-- JS and CSS SCripts -->
 <script src="js/select2.min.js"></script> <!-- search bar script -->
-<link rel="stylesheet" href="css/select2.css"></link> <!-- search bar css -->
+<link rel="stylesheet" src="css/select2.css"></link> <!-- search bar css -->
 
 <script type="text/javascript">
 
