--- a/index.html
+++ b/index.html
@@ -1057,8 +1057,8 @@
   --------------------------------------------------------------------------->
 
 <!-- JS and CSS SCripts -->
-<script src="js/select2.min.js"></script> <!-- search bar script -->
-<link rel="stylesheet" src="css/select2.css"></link> <!-- search bar css -->
+<script src="JS/select2.min.js"></script> <!-- search bar script -->
+<link rel="stylesheet" src="CSS/select2.css"></link> <!-- search bar css -->
 
 <script type="text/javascript">
 
