--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
 
 <!-- JS and CSS SCripts -->
 <script src="JS/select2.min.js"></script> <!-- search bar script -->
-<link rel="stylesheet" src="CSS/select2.css"></link> <!-- search bar css -->
+<link rel="stylesheet" href="CSS/select2.css"></link> <!-- search bar css -->
 
 <script type="text/javascript">
 
